--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <!-- website logo -->
         <div class="logo">
           <svg xmlns="http://www.w3.org/2000/svg" width="98" height="100" viewBox="0 0 98 100" fill="none">
-            <g clip-path="url(#clip0_1_15)" filter="url(#filter0_d_1_15)">
+            <g clip-path="url(#clip0_1_15)"class="icon" filter="url(#filter0_d_1_15)">
               <g opacity="0.1">
                 <g opacity="0.1">
                   <path opacity="0.1" d="M10 47.43H48.6731V8.84703C27.3157 8.84703 10 26.1224 10 47.43Z" fill="#1E1E1E"/>
@@ -55,6 +55,8 @@
             Start benefiting from the wellness experience. For companies looking
             on increasing productivity, and improving organization wellness.
           </p>
+          <!-- paragraph for small screen -->
+          <p class="small-screen-p">Inspiring wholesome harmony for the mind, body and spirit, for everyone, everywhere.</p>
         </div>
       </div>
       <div class="right-side-content">
@@ -113,7 +115,10 @@
           </form>
           <p>By clicking Register, you agree to our <a>Terms of Use</a> and our <a>Privacy Policy</a></p>
         </div>
-        
+        <!-- for small screen -->
+        <div class="agreement"> 
+          <p>By clicking Register, you agree to our <a>Terms of Use</a> and our <a>Privacy Policy</a></p>
+        </div>
       </div>
     </div>
   </body>
