--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
             <div class="row-5 password stretched">
               <label for="password">Password</label>
               <input type="password" class="passwrd" id="password" minlength="9" maxlength="12" required>
-              <i class="fa-regular fa-eye" id="tooglePassword" onclick="togglePassword()"></i>
+              <i class="fa-regular fa-eye" id="tooglePassword"></i>
             </div>
             <div class="form-button" role="button">
               <a href="" class="button">Register</a>
